# RobotPose

./: CMakeLists.txt  detect_board.cpp  detect_board_charuco.cpp  main.cpp
charuco_board_detect/: detect_board_charuco.cpp
modules/aruco/include/opencv2/: aruco.hpp
modules/aruco/include/opencv2/aruco/: charuco.hpp  dictionary.hpp
modules/aruco/samples/: detect_board_charuco.cpp
